Adicionado Categorias e Produtos
 - Adicionada nova pasta images/uploads ao gitignore (pasta onde será armazenadas as imagens dos produtos que forem adicionados);
- Category Cast, um conversor que transforma verifica se a categoria existe e converte seu valor em um id inteiro;
- Novos eventos `can` e `in_group` que validam por meio da Library Authorize se o usuário ativo tem permissão ou está em um grupo respectivamente;
- Rotas automáticas que definem uma seção da tela de administrador;
- Novos serviços adicionados (Log, Authorize, File Manager, Form Handler e Table Handler);
- Templates de exibição de erro personalizados;
- Novos Controntrollers, Views, Models, Entities, Seeders e Migrations para Produtos e Categorias;
- Helper para formatação de valores;
- Nova mensagem para a `alpha_accented_numeric_space` validação;

Obs: Toda a implementação das novas models foi feita via testes e posteriormente integrados ao programa.

--- a/.gitignore
+++ b/.gitignore
@@ -207,3 +207,9 @@ nb-configuration.xml
 /phpunit*.xml
 
 ###< CodeIgniter ###
+
+###> Personal ###
+
+public/assets/images/uploads
+
+###< Personal ###
